--- a/package.json
+++ b/package.json
@@ -1,43 +1,68 @@
 {
-  "license": "MIT",
-  "name": "next-cm-v2",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+  "name": "candy-machine-mint",
+  "version": "0.2.0",
+  "private": true,
   "dependencies": {
-    "@bundlr-network/client": "^0.2.4",
-    "@civic/solana-gateway-react": "^0.4.6",
+    "@babel/runtime": "^7.15.5",
+    "@civic/solana-gateway-react": "^0.6.0",
+    "@identity.com/solana-gateway-ts": "^0.8.1",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@metaplex/js": "^2.0.1",
-    "@project-serum/anchor": "^0.14.0",
+    "@project-serum/anchor": "^0.17.0",
     "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.7.0",
+    "@solana/wallet-adapter-material-ui": "^0.13.1",
     "@solana/wallet-adapter-react": "^0.13.1",
     "@solana/wallet-adapter-react-ui": "^0.6.1",
     "@solana/wallet-adapter-wallets": "^0.11.3",
-    "@solana/web3.js": "^1.31.0",
+    "@solana/web3.js": "^1.33.0",
     "mime": "^3.0.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
     "react-countdown": "^2.3.2",
-    "react-dom": "17.0.2",
-    "react-hot-toast": "^2.1.1",
+    "react-dom": "^17.0.2",
+    "react-is": "^16.8.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "typescript": "^4.1.2",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy:gh": "gh-pages -d ./build/ --repo https://github.com/pit-v/metaplex -t true --branch gh-pages-3",
+    "deploy": "cross-env ASSET_PREFIX=/metaplex/ yarn build && yarn deploy:gh"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/react": "17.0.27",
-    "autoprefixer": "^10.4.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "next-transpile-modules": "^8.0.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.4.3"
+    "@types/styled-components": "^5.1.14",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@testing-library/dom": "^7.21.4",
+    "@types/react-dom": "^17.0.0"
   }
 }
